Updated readme files and documentation

--- a/homework/homework4/notebooks/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
+++ b/homework/homework4/notebooks/stage04_data-acquisition-and-ingestion_homework-starter.ipynb
@@ -60,6 +60,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd9032a5",
+   "metadata": {},
+   "source": [
+    "Here I changed the environment path to get to the correct location so that the .env file can be accessed."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "3c7bf0a7",
@@ -79,9 +87,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65d86eea",
    "metadata": {},
    "source": [
-    "## Helpers (use or modify)"
+    "Making sure that I am in the correct directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Helpers "
    ]
   },
   {
@@ -109,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 1 — API Pull (Required)\n",
+    "## Part 1 — API Pull \n",
     "Choose an endpoint (e.g., Alpha Vantage or use `yfinance` fallback)."
    ]
   },
@@ -172,6 +188,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7cfd925f",
+   "metadata": {},
+   "source": [
+    "### Here you can see that the adjusted close function has been shifted to the premium version of the alphavantage api, so we were not able to access that."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "78b99e97",
@@ -223,6 +247,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a0c6d16",
+   "metadata": {},
+   "source": [
+    "#### Successfully retrieved the ticker data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "d9babb1c",
@@ -255,6 +287,14 @@
    ],
    "source": [
     "_ = save_csv(df_api.sort_values('date'), prefix='api', source='alpha' if USE_ALPHA else 'yfinance', symbol=SYMBOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef2d852",
+   "metadata": {},
+   "source": [
+    "#### Successfully stored the fetched data into a CSV file in the data/raw folder."
    ]
   },
   {
@@ -304,6 +344,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "553e3e37",
+   "metadata": {},
+   "source": [
+    "### Chose Yfinance tables. Some other tables had errors in their structures while scraping."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "id": "16d53064",
@@ -345,13 +393,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75eafff8",
+   "metadata": {},
+   "source": [
+    "#### Successfully stored the scraped table to a CSV file in the data/raw folder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Documentation\n",
-    "- API Source: (URL/endpoint/params)\n",
-    "- Scrape Source: (URL/table description)\n",
-    "- Assumptions & risks: (rate limits, selector fragility, schema changes)\n",
-    "- Confirm `.env` is not committed."
+    "- Please go through the README file for proper documentation."
    ]
   }
  ],
