Updated Documentation and Readme

--- a/homework/homework6/notebooks/stage06_data-preprocessing_homework-starter.ipynb
+++ b/homework/homework6/notebooks/stage06_data-preprocessing_homework-starter.ipynb
@@ -5,7 +5,14 @@
    "metadata": {},
    "source": [
     "# Homework Starter — Stage 6: Data Preprocessing\n",
-    "Use this notebook to apply your cleaning functions and save processed data."
+    "Sparsh Patel 08/19/2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by importing the encessary libraries"
    ]
   },
   {
@@ -42,6 +49,13 @@
     "import os\n",
     "os.chdir('/Users/sparshpatel/bootcamp_sparsh_patel/homework/homework6')\n",
     "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make sure that we are in the proper directory"
    ]
   },
   {
@@ -194,29 +208,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here, I have taken the scraped table from project 4, which was done through beautifulsoup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Apply Cleaning Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Apply your functions here\n",
-    "# Example:\n",
-    "# df = cleaning.fill_missing_median(df, ['col1','col2'])\n",
-    "# df = cleaning.drop_missing(df, threshold=0.5)\n",
-    "# df = cleaning.normalize_data(df, ['col1','col2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_cleaned = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Made a copy of the original data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped columns: Unnamed: 2 and 52 Wk range\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_cleaned=df_cleaned.drop(columns=['Unnamed: 2','52 Wk range'])\n",
+    "print(\"Dropped columns: Unnamed: 2 and 52 Wk range\")"
    ]
   },
   {
@@ -257,6 +290,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that all the null values havee been dropped"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -293,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -302,8 +342,8 @@
      "text": [
       "COMPARISON: Original vs Cleaned\n",
       "========================================\n",
-      "Shape: (25, 12) -> (25, 12)\n",
-      "Missing values: 63 -> 50\n",
+      "Shape: (25, 12) -> (25, 10)\n",
+      "Missing values: 63 -> 0\n",
       "\n",
       "Missing values by column:\n",
       "Original:\n",
@@ -313,9 +353,7 @@
       "dtype: int64\n",
       "\n",
       "Cleaned:\n",
-      "Unnamed: 2     25\n",
-      "52 Wk range    25\n",
-      "dtype: int64\n",
+      "Series([], dtype: int64)\n",
       "\n",
       "Sample statistics (before/after):\n",
       "Price: 52.36 -> 52.36\n",
@@ -345,6 +383,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can see here that all the missing values have been cleaned. And the Price and change values have been normalised"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Save Cleaned Dataset"
    ]
   },
@@ -358,11 +403,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Successfully saved the data set to the data processed folder. "
+   ]
   }
  ],
  "metadata": {
