--- a/homework/homework5/notebooks/stage05_data-storage_homework-starter.ipynb
+++ b/homework/homework5/notebooks/stage05_data-storage_homework-starter.ipynb
@@ -187,8 +187,7 @@
    "metadata": {},
    "source": [
     "## 5) Documentation (TODO)\n",
-    "- Update README with a **Data Storage** section (folders, formats, env usage).\n",
-    "- Summarize validation checks and any assumptions."
+    "- Please go through the readme file to see the proper documentation"
    ]
   }
  ],
