--- a/project/notebooks/01_data_fetching_and_processing..ipynb
+++ b/project/notebooks/01_data_fetching_and_processing..ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1c2382d9",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,6 @@
     }
    ],
    "source": [
-    "\n",
     "\n",
     "os.chdir('/Users/sparshpatel/bootcamp_sparsh_patel')\n",
     "print(os.getcwd())"
@@ -127,29 +126,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "b0b7824e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "load_dotenv(dotenv_path=\"/Users/sparshpatel/bootcamp_sparsh_patel/homework/.env\")\n",
-    "load_dotenv()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "052cc8bc",
    "metadata": {},
@@ -159,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "6539c47e",
    "metadata": {},
    "outputs": [
@@ -201,53 +177,53 @@
     }
    ],
    "source": [
-    "# Simple script to download NSE Stock Historical Price Data\n",
+    "\n",
     "from kaggle.api.kaggle_api_extended import KaggleApi\n",
     "import pandas as pd\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Load environment variables from .env file\n",
+    "\n",
     "load_dotenv()\n",
     "\n",
-    "# Set Kaggle credentials from environment variables\n",
+    "\n",
     "os.environ['KAGGLE_USERNAME'] = os.getenv('KAGGLE_USERNAME')\n",
     "os.environ['KAGGLE_KEY'] = os.getenv('KAGGLE_KEY')\n",
     "\n",
-    "# Initialize and authenticate\n",
+    "\n",
     "api = KaggleApi()\n",
     "api.authenticate()\n",
     "\n",
-    "# Your dataset\n",
+    "\n",
     "dataset_name = \"stacknishant/nse-stock-historical-price-data\"\n",
     "download_path = \"../data/raw/nse_stock_data/\"\n",
     "\n",
     "\n",
-    "# Create directory if it doesn't exist\n",
+    "\n",
     "os.makedirs(download_path, exist_ok=True)\n",
     "\n",
-    "# Download the dataset\n",
+    "\n",
     "print(\"Downloading NSE Stock Historical Price Data...\")\n",
     "api.dataset_download_files(dataset_name, path=download_path, unzip=True)\n",
     "\n",
-    "# List downloaded files\n",
+    "\n",
     "csv_files = [f for f in os.listdir(download_path) if f.endswith('.csv')]\n",
     "print(f\"Downloaded {len(csv_files)} stock files\")\n",
     "\n",
-    "# Show first 10 stock symbols\n",
+    "\n",
     "print(\"Sample stocks available:\")\n",
     "for i, file in enumerate(csv_files[:10]):\n",
     "    stock_name = file.replace('.csv', '')\n",
     "    print(f\"{i+1}. {stock_name}\")\n",
     "\n",
-    "# Example: Load data for a specific stock (e.g., RELIANCE)\n",
+    "\n",
     "if 'RELIANCE.csv' in csv_files:\n",
     "    df = pd.read_csv(os.path.join(download_path, 'RELIANCE.csv'))\n",
     "    print(f\"\\nRELIANCE stock data preview:\")\n",
     "    print(f\"Shape: {df.shape}\")\n",
     "    print(df.head())\n",
     "else:\n",
-    "    # Load any available stock file as example\n",
+    "    \n",
     "    if csv_files:\n",
     "        sample_file = csv_files[0]\n",
     "        df = pd.read_csv(os.path.join(download_path, sample_file))\n",
@@ -255,6 +231,14 @@
     "        print(f\"\\n{stock_name} stock data preview:\")\n",
     "        print(f\"Shape: {df.shape}\")\n",
     "        print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "671f5d2c",
+   "metadata": {},
+   "source": [
+    "### The reason why we see NaN in almost every column is not because our data is bad. It is because a lot of these companies were not listed during the start time i.e 1991"
    ]
   },
   {
@@ -331,8 +315,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3ba89d8",
+   "metadata": {},
+   "source": [
+    "### Here we can see a better data of all our columns\n",
+    "#### Our dataset contains around 1400 companies and their daily closing prices from 1991 to 2024"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "edb52462",
    "metadata": {},
    "outputs": [
@@ -349,21 +342,19 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "# Threshold for dropping\n",
     "threshold = 0.9  \n",
     "\n",
-    "# Calculate missing ratios\n",
+    "\n",
     "missing_ratio = df.isna().mean()\n",
     "\n",
-    "# Find columns to drop\n",
+    "\n",
     "cols_to_drop = missing_ratio[missing_ratio > threshold].index.tolist()\n",
     "\n",
-    "# Print summary\n",
+    "\n",
     "print(f\"Total columns dropped: {len(cols_to_drop)}\")\n",
     "print(\"Columns dropped:\", cols_to_drop)\n",
     "\n",
-    "# Drop them\n",
+    "\n",
     "df_emptyremoved= df.drop(columns=cols_to_drop)\n",
     "\n",
     "print(\"\\nRemaining columns:\", df.columns.tolist())\n"
@@ -378,6 +369,14 @@
     "\n",
     "\n",
     "So instead, we will be going with the data from 2010 onwards"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d998497",
+   "metadata": {},
+   "source": [
+    "# Data filtering and cleaning"
    ]
   },
   {
