--- a/project/notebooks/01_data_fetching_and_processing..ipynb
+++ b/project/notebooks/01_data_fetching_and_processing..ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2c55bcea",
+   "metadata": {},
+   "source": [
+    "Sparsh Patel 08/28/2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84dc9f42",
    "metadata": {},
    "source": [
-    "## Importing all the necessary libraries first"
+    "## Importing all the necessary libraries first\n"
    ]
   },
   {
