--- a/project/notebooks/02_data_transformation.ipynb
+++ b/project/notebooks/02_data_transformation.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9fa82a2c",
+   "metadata": {},
+   "source": [
+    "Sparsh Patel 08/28/2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f24ec09a",
    "metadata": {},
    "source": [
