--- a/project/notebooks/03_simulation_and_eda.ipynb
+++ b/project/notebooks/03_simulation_and_eda.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "004faa13",
+   "metadata": {},
+   "source": [
+    "Sparsh Patel 08/28/2025"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fc55516f",
    "metadata": {},
    "source": [
